marquee overflow issue fixed

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,5 +2,6 @@
 
 :host {
     @include dFlex($fd: column);
+    width: 100%;
     min-height: 100vh;
 }
