--- a/src/app/main-content/hero/hero.component.scss
+++ b/src/app/main-content/hero/hero.component.scss
@@ -4,6 +4,7 @@
   @include dFlex($fd: column, $ai: center);
   min-height: 100vh;
   width: 100%;
+  overflow-x: clip;
   @include respond-to-landscape {
     min-height: 150vh;
   }
@@ -138,14 +139,6 @@ span {
 
 a img {
   @include transition-all;
-}
-
-.marquee-div {
-  @include dFlex();
-  position: relative;
-  bottom: 0;
-  // overflow-x: hidden;
-  // width: 100%;
 }
 
 .scroll-down {
