--- a/src/app/shared/marquee/marquee.component.scss
+++ b/src/app/shared/marquee/marquee.component.scss
@@ -1,13 +1,13 @@
 @import "../../../styles.scss";
 
 :host {
+  position: relative;
   bottom: 5vh;
-  backdrop-filter: blur(10px);
+  transform: rotate(-3deg);  backdrop-filter: blur(10px);
   background-color: rgba(255, 255, 255, 0.05);
   padding: 12px 0;
   font-size: 24px;
   font-weight: 400;
-  transform: rotate(-3deg);
   @include respond-to("sm") {
     padding: 16px 0;
     font-size: 32px;
@@ -18,7 +18,7 @@
   }
 }
 
-div {
+.marquee-div {
   animation: scroll-text 20s infinite linear;
   white-space: nowrap;
   span {
